added gitignore, added type labels

--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miny Stack</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
+    <script src="app.js" defer type="module"></script>
   </head>
   <body>
     <h1>This is my miny stack app</h1>
+    <h3>by xxx_aisling_xxx</h3>
     <p id="message"></p>
   </body>
 </html>
